Closed Bug 1923260 Opened 1 year ago Closed 1 year ago

about:neterror pages are not exempt from svg.disabled on Android

Categories

(Core :: DOM: Core & HTML, defect)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
137 Branch
Tracking Status
firefox137 --- fixed

People

(Reporter: pierov, Assigned: pierov)

References

Details

(Whiteboard: [tor 43129])

Attachments

(2 files)

Attached image Screenshot

When svg.disabled is true, about:neterror pages on Android (or their equivalent) are not exempted, and they display the SVG as text instead of as a picture.

STR:

  1. set about:neterror
  2. go to a non-existing address
  3. notice the text at the top of the page (or check the attached screenshot)
Assignee: nobody → pierov
Status: NEW → ASSIGNED
Severity: -- → S3

Is there anything I can do to unblock this Bug?

Flags: needinfo?(sefeng)

I am a bit surprised that about: on android doesn't have a system principal? But overall the approach is on the right direction.

Peter, are you interested in reviewing this patch, or any other comments?

Flags: needinfo?(sefeng) → needinfo?(peterv)
Flags: needinfo?(peterv)

I am a bit surprised that about: on android doesn't have a system principal?

Previously we tried to reduce the places system principal is required.

Conversely, would allowing all resource:// images be an option?

Pushed by tritter@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8067686afe6b Exempt Android resources from svg.disabled. r=peterv
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: