Bug 1923260 - Exempt Android resources from svg.disabled. r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D224895